# npm-mas-mas

./: .travis.yml  Makefile  README  docker-compose.yml  package.json
cmaki/: GitUtils.cmake  cmaki.cmake
cmaki/facts/: facts.cmake
cmaki_docker/: .travis.yml  README.md  build.sh
cmaki_generator/: CMakeLists.txt  build  build.cmd  build.py  check_remote_version.py  common.yml  compilation.py  download_package.py  get_package.py  get_return_code.py  hash_version.py  packing.py  pipeline.py  prepare.py  purge.py  run.sh  run_tests.py  save_package.py  third_party.py  upload.py  upload_package.py  utils.py
cmaki_generator/sdl2/: CMakeLists.txt
cmaki_generator/unittest/: CMakeLists.txt
cmaki_identifier/: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmaki_emulator.sh  cmaki_identifier.cmake  cmaki_identifier.sh  npm-do  package.json  setup.cmd  setup.sh
cmaki_identifier/tests/: CMakeLists.txt  cmaki_identifier.cpp
cmaki_scripts/: README.md  ci.cmd  ci.sh  clean.cmd  clean.sh  cmaki.cmd  cmaki.js  cmaki_depends.cmd  cmaki_depends.sh  compile.cmd  compile.sh  create_package.cmd  create_package.sh  docker.sh  make_artifact.cmd  make_artifact.sh  package.json  publish.sh  replace.sh  run.cmd  setup.cmd  setup.sh  test.cmd  test.sh  upload.cmd  upload.sh  upload_package.cmd  upload_package.sh
docker/: Dockerfile.macos_64
servfactor/: Dockerfile  Makefile  docker-compose.yml  download.php  index.php  stats.php  upload.php
