project(cmaki_identifier_project CXX)
cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 14)
include_directories(boostorg_predef/include)
enable_testing()

# set(_DESTINE ".")
# file(GLOB DEPLOY_FILES_AND_DIRS "${_DESTINE}/*")
# foreach(ITEM ${DEPLOY_FILES_AND_DIRS})
# 	IF( IS_DIRECTORY "${ITEM}" )
# 		LIST( APPEND DIRS_TO_DEPLOY "${ITEM}" )
# 	ELSE()
# 		LIST(APPEND FILES_TO_DEPLOY "${ITEM}")
# 	ENDIF()
# endforeach()
# foreach(d ${DIRS_TO_DEPLOY})
# 	message("dir: ${d}")
# endforeach()
# foreach(f ${FILES_TO_DEPLOY})
# 	message("file: ${f}")
# endforeach()

add_subdirectory(tests)
